# adbc

./: .gitignore  1  LICENSE.md  README.md  README.rst  adbc.yml  pyproject.toml  test.sqlite
adbc/: __init__.py  cache.py  cli.py  config.py  constants.py  copy.py  create.py  database.py  diff.py  drop.py  exceptions.py  executors.py  host.py  logging.py  merge.py  model.py  namespace.py  patches.py  query.py  scope.py  sql.py  store.py  symbols.py  table.py  template.py  testing.py  utils.py  vault.py  workflow.py
adbc/backends/: __init__.py  base.py  core.py  postgres.py  sqlite.py
adbc/commands/: __init__.py  diff.py  run.py
adbc/generators/: __init__.py  base.py
adbc/operations/: apply.py  copy.py  create.py  diff.py  drop.py  info.py  merge.py
adbc/preql/: __init__.py  build.py  builder.py  dialect.py  parser.py  validator.py
adbc/preql/backends/: base.py  postgres.py  sql.py
adbc/preql/builders/: __init__.py  base.py  core.py  postgres.py  sql.py  sqlite.py
adbc/preql/parsers/: __init__.py  base.py  postgres.py  sql.py
adbc/store/: __init__.py  database.py  host.py  namespace.py  table.py
adbc/workflow/: __init__.py  base.py  copy.py  debug.py  diff.py  engine.py  info.py  query.py  sql.py  step.py
adbc/zql/: __init__.py  builder.py  parser.py  utils.py
adbc/zql/builders/: base.py  core.py  postgres.py  sql.py  sqlite.py
adbc/zql/parsers/: base.py  postgres.py  sql.py  sqlite.py
apg/: database.py  host.py  namespace.py  query.py  store.py  table.py  utils.py
apg/commands/: __init__.py  diff.py  utils.py
docs/: preql.md  zql.md
tests/: test_adbc.py  utils.py
tests/integration/: test_adbc.py  test_apply.py  test_copy.py  test_diff.py  test_info.py  test_workflow.py  utils.py
tests/unit/preql/: test_build.py
tests/unit/zql/: test_build.py
