[tool.poetry]
name = "adbc"
version = "0.1.5"
description = ""
authors = ["aleontiev <alonetiev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
asyncpg = "^0.18.3"
cached_property = "^1.5.1"
ipython = "^7.6.1"
cleo = "^0.7.6"
jsondiff = "^1.2.0"
pyyaml = "^5.3"
pyaml = "^19.12.0"
aiobotocore = "^0.12.0"
uvloop = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.13.0"

[tool.poetry.scripts]
adbc = "adbc.cli:main"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"

