[tool.poetry]
name = "adbc"
version = "0.3.8"
description = ""
authors = ["aleontiev <alonetiev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cached_property = "^1.5.2"
ipython = "^8.18.1"
cleo = "^2.1.0"
jsondiff = "^2.0.0"
pyaml = "20.4.0"
aiobotocore = "^2.12.2"
uvloop = "^0.19.0"
pyparsing = "^3.1.2"
blessings = "^1.7"
dataclasses_json = "^0.6.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^8.18.1"
pytest-asyncio = "^0.14.0"
aiosqlite = "^0.20.0"
aiomysql = "^0.2.0"
asyncpg = "^0.29.0"

[tool.poetry.scripts]
adbc = "adbc.cli:main"

[build-system]
requires = ["poetry.core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
